# InputParserForRuntimeManager

./: .gitattributes  CMakeLists.txt  README.md  RMParser.cpp  RMParser.hpp  contracts_input.txt  main.cpp
parserGrammars/: RMContractParserGrammar.cpp  RMContractParserGrammar.hpp  RMParserGrammar.cpp  RMParserGrammar.hpp
